Fix overflows

--- a/src/components/Generate.module.scss
+++ b/src/components/Generate.module.scss
@@ -126,11 +126,11 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-items: center;
   justify-content: center;
   align-items: center;
-  height: 12rem;
-  width: 16rem;
+  height: 15rem;
+  width: 100%;
+  max-width: 15rem;
   padding: 0.25rem;
   margin: auto;
   border-radius: 0.5rem;
@@ -164,7 +164,8 @@
 .inputButton {
   position: relative;
   display: block;
-  width: 20rem;
+  width: 100%;
+  max-width: 20rem;
   height: 10rem;
   background-color: var(--primary);
   border-radius: 0.5rem;
@@ -175,6 +176,7 @@
   font-family: var(--font-primary);
   font-size: 2.5rem;
   cursor: pointer;
+  overflow: hidden;
 }
 .inputButton:disabled,
 .inputButton:disabled:hover {
@@ -189,6 +191,6 @@
   filter: brightness(0.9);
 }
 
-input {
+input.fileInput {
   width: 100%;
 }
