--- a/src/components/Home.module.scss
+++ b/src/components/Home.module.scss
@@ -144,7 +144,7 @@
 }
 
 // Small screen
-@media (max-width: 650px) {
+@media (max-width: 550px) {
   .menuContainer,
   .titleContainer {
     width: 100%;
